[gd_scene load_steps=14 format=3 uid="uid://b67pw1ph33bu4"]

[ext_resource type="Script" path="res://2d/source/scripts/dungeon_stats/dungeon_stats.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://de7xyqb1syvy" path="res://bundles/assets/images/hud/food.png" id="2"]
[ext_resource type="Texture2D" uid="uid://b2tn4d3e44yfg" path="res://bundles/assets/images/hud/icon_library.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bii1te02er04y" path="res://bundles/assets/images/hud/gold.png" id="4"]
[ext_resource type="Texture2D" uid="uid://tvydxsooyc0l" path="res://bundles/assets/images/hud/icon_dungeon.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bx7yts768umsh" path="res://bundles/assets/images/hud/paper.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bt4xonnqk1wy4" path="res://bundles/assets/images/hud/clock.png" id="7"]
[ext_resource type="Theme" uid="uid://c5jg8sho14qvp" path="res://2d/assets/themes/theme_small_font.tres" id="8"]
[ext_resource type="Theme" uid="uid://b1mllftlbva2u" path="res://2d/assets/themes/theme.tres" id="9"]
[ext_resource type="Theme" uid="uid://fr1lin3sbs06" path="res://2d/assets/themes/transparent-static.tres" id="10"]
[ext_resource type="Texture2D" uid="uid://8dvdbn00t3q3" path="res://bundles/assets/images/potions/potions.png" id="11"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0.0862745, 1)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0, 0, 0.0862745, 1)

[node name="Node2D" type="Node2D" groups=["hud", "potion_panel"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1")

[node name="PanelHorizontal" type="Panel" parent="."]
offset_right = 1024.0
offset_bottom = 34.0
scale = Vector2(2, 2)
theme = ExtResource("9")
theme_override_styles/panel = SubResource("1")

[node name="LibrarySprite" type="Sprite2D" parent="."]
visible = false
z_index = 10
position = Vector2(34, 36)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3")

[node name="DungeonSprite" type="Sprite2D" parent="."]
visible = false
z_index = 10
position = Vector2(34, 36)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5")

[node name="CoordinatesLabel" type="Label" parent="."]
offset_left = 68.0
offset_top = 12.0
offset_right = 208.0
offset_bottom = 34.0
scale = Vector2(2.1, 2.1)
theme = ExtResource("8")
theme_override_constants/line_spacing = 0
text = "00000000000000"

[node name="ScoreSprite" type="Sprite2D" parent="."]
position = Vector2(414, 30)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 448.0
offset_top = 12.0
offset_right = 549.0
offset_bottom = 34.0
scale = Vector2(2.1, 2.1)
theme = ExtResource("8")
theme_override_constants/line_spacing = 0
text = "0000000000"

[node name="GoldSprite" type="Sprite2D" parent="."]
position = Vector2(712, 34)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4")

[node name="GoldLabel" type="Label" parent="."]
offset_left = 746.0
offset_top = 12.0
offset_right = 846.0
offset_bottom = 34.0
scale = Vector2(2.1, 2.1)
theme = ExtResource("8")
theme_override_constants/line_spacing = 0
text = "0000000000"

[node name="FoodSprite" type="Sprite2D" parent="."]
position = Vector2(1008, 32)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2")

[node name="FoodLabel" type="Label" parent="."]
offset_left = 1042.0
offset_top = 12.0
offset_right = 1072.0
offset_bottom = 34.0
scale = Vector2(2.1, 2.1)
theme = ExtResource("8")
theme_override_constants/line_spacing = 0
text = "000"

[node name="ClockSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(1160.01, 32)
scale = Vector2(1.5, 1.5)
texture = ExtResource("7")

[node name="ClockLabel" type="Label" parent="."]
visible = false
offset_left = 1194.0
offset_top = 12.0
offset_right = 1249.0
offset_bottom = 34.0
scale = Vector2(2.1, 2.1)
theme = ExtResource("8")
theme_override_constants/line_spacing = 0
text = "00:00A"

[node name="PanelVertical" type="Panel" parent="."]
offset_top = 64.0
offset_right = 40.0
offset_bottom = 432.0
scale = Vector2(2, 2)
theme = ExtResource("9")
theme_override_styles/panel = SubResource("2")

[node name="Potion1" type="Sprite2D" parent="."]
position = Vector2(10, 134)
scale = Vector2(2, 2)
texture = ExtResource("11")
offset = Vector2(16, 16)
hframes = 7

[node name="Label1" type="Label" parent="."]
offset_left = 14.0
offset_top = 194.0
offset_right = 52.0
offset_bottom = 217.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("10")
text = "000"

[node name="Potion2" type="Sprite2D" parent="."]
position = Vector2(10, 230)
scale = Vector2(2, 2)
texture = ExtResource("11")
offset = Vector2(16, 16)
hframes = 7
frame = 1

[node name="Label2" type="Label" parent="."]
offset_left = 14.0
offset_top = 290.0
offset_right = 52.0
offset_bottom = 313.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("10")
text = "000"

[node name="Potion3" type="Sprite2D" parent="."]
position = Vector2(10, 326)
scale = Vector2(2, 2)
texture = ExtResource("11")
offset = Vector2(16, 16)
hframes = 7
frame = 2

[node name="Label3" type="Label" parent="."]
offset_left = 14.0
offset_top = 386.0
offset_right = 52.0
offset_bottom = 409.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("10")
text = "000"

[node name="Potion4" type="Sprite2D" parent="."]
position = Vector2(10, 422)
scale = Vector2(2, 2)
texture = ExtResource("11")
offset = Vector2(16, 16)
hframes = 7
frame = 3

[node name="Label4" type="Label" parent="."]
offset_left = 14.0
offset_top = 482.0
offset_right = 52.0
offset_bottom = 505.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("10")
text = "000"

[node name="Potion5" type="Sprite2D" parent="."]
position = Vector2(10, 518)
scale = Vector2(2, 2)
texture = ExtResource("11")
offset = Vector2(16, 16)
hframes = 7
frame = 4

[node name="Label5" type="Label" parent="."]
offset_left = 14.0
offset_top = 578.0
offset_right = 52.0
offset_bottom = 601.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("10")
text = "000"

[node name="Potion6" type="Sprite2D" parent="."]
position = Vector2(10, 614)
scale = Vector2(2, 2)
texture = ExtResource("11")
offset = Vector2(16, 16)
hframes = 7
frame = 5

[node name="Label6" type="Label" parent="."]
offset_left = 14.0
offset_top = 674.0
offset_right = 52.0
offset_bottom = 697.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("10")
text = "000"

[node name="Potion7" type="Sprite2D" parent="."]
position = Vector2(10, 710)
scale = Vector2(2, 2)
texture = ExtResource("11")
offset = Vector2(16, 16)
hframes = 7
frame = 6

[node name="Label7" type="Label" parent="."]
offset_left = 14.0
offset_top = 770.0
offset_right = 52.0
offset_bottom = 793.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("10")
text = "000"
